# xc_ai_platform

./: .env.example  .gitignore  .pyre_configuration  AGENTS.md  Dockerfile-postgres  README.md  backend_vibe_coding.md  database_vibe_coding.md  docker-compose.yml  frontend_vibe_coding.md  package-lock.json  pyproject.toml  pyrightconfig.json
backend/: .env  .env.example  pyproject.toml  test_fr_excel_analyzer.py  test_langfuse.py  test_langfuse_observe.py  test_login.py  test_sap_rfc_client.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  langfuse_observability.py  llm_factory.py  logger.py  middleware.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/mcp/: base.py  manager.py  security.py
backend/app/models/: base.py  knowledge_base.py  sys_company.py  sys_dept.py  sys_post.py  sys_user.py
backend/app/schemas/: agent.py  knowledge_base.py  page.py  result.py  user.py
backend/app/scripts/: check_db.py  init_db.py  regenerate_storage_bin.py  run_sync.py  test_http.py  test_image_extract.py  update_sync_passwords.py
backend/app/services/: agent_service.py  contract_service.py  dept_service.py  file_service.py  hr_sync_service.py  knowledge_base_service.py  onlyoffice_service.py  role_service.py  user_service.py
backend/scripts/: cleanup_insight_test_data.py  generate_insight_formal_reports.py  insight_asset_ai_review_smoke.py  insight_bootstrap_run.py  insight_clean_report_materials.py  insight_deepen_light_intelligence.py  insight_dictionary_acceptance.py  insight_fix_display_fields.py  insight_full_readiness_acceptance.py  insight_generate_latest_reports.py  insight_main_flow_smoke.py  insight_monitor_scheduler_smoke.py  insight_notification_acceptance.py  insight_p0_acceptance.py  insight_p1_acceptance.py  insight_p1_report_smoke.py  insight_p1_seed_and_collect.py  insight_permission_acceptance.py  insight_quality_acceptance.py  insight_regenerate_quality_reports.py  insight_report_export_acceptance.py  insight_report_export_retry_acceptance.py  insight_report_template_boundary_acceptance.py  insight_run_all_channel_adapters.py  insight_run_all_monitor_configs_once.py  insight_runtime_supervisor.py  insight_scheduler_acceptance.py  insight_scheduler_due_acceptance.py  insight_scheduler_failure_pause_acceptance.py  insight_scheduler_lock_acceptance.py  insight_scheduler_retry_cleanup_acceptance.py  insight_screen_relevance.py  insight_settings_acceptance.py  refresh_insight_candidate_summaries.py  seed_insight_data_sources.py
backend/storage/insight_adapter_run_reports/: backfill_15d_20260630_005231.json  backfill_15d_20260630_005231.md  simulate-daily_15d_20260630_005054.json  simulate-daily_15d_20260630_005054.md  simulate-daily_15d_20260630_005447.json  simulate-daily_15d_20260630_005447.md  simulate-daily_15d_20260630_010039.json  simulate-daily_15d_20260630_010039.md  (+8 more)
(+491 files in other folders)
