[project]
name = "ai-platform-backend"
version = "0.1.0"
description = "AI Platform Backend with FastAPI and LangGraph"
authors = [{ name = "AI Assistant", email = "ai@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]",
    "uvicorn[standard]",
    "sqlmodel",
    "asyncpg",
    "langchain",
    "langchain-community",
    "langgraph",
    "redis",
    "minio",
    "langfuse",
    "python-multipart",
    "pymilvus",
    "httpx",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[argon2]",
    "tenacity",
    "pymssql>=2.3.10",
    "pyodbc>=5.3.0",
    "loguru>=0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
