[project]
name = "ai-platform-backend"
version = "0.1.0"
description = "AI Platform Backend with FastAPI and LangGraph"
authors = [{ name = "AI Assistant", email = "ai@example.com" }]
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi[all]",
    "uvicorn[standard]",
    "sqlmodel",
    "asyncpg",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.0.4",
    "redis",
    "minio",
    "langfuse",
    "python-multipart",
    "pymilvus",
    "httpx[socks]",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[argon2]",
    "tenacity",
    "pymssql>=2.3.10",
    "pyodbc>=5.3.0",
    "loguru>=0.7.2",
    "pyjwt>=2.10.1",
    "mammoth>=1.11.0",
    "openpyxl>=3.1.5",
    "debugpy>=1.8.20",
    "langchain-core>=1.2.23",
    "mcp>=1.0.0",
    "ruff>=0.15.12",
    "pyrfc==3.3.1",
    "deepagents>=0.5.9",
    "pymysql>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
